--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,6 +16,10 @@ spring:
     password: root
     username: root
     url: jdbc:mysql://localhost:3306/dndManagementSystem?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC
+  security:
+    user:
+      name: user
+      password: pass
 logging:
   level:
     org:
@@ -27,4 +31,5 @@ logging:
     blog: WARN
 server:
   port: 8080
+
 
