--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -32,4 +32,9 @@ logging:
 server:
   port: 8080
 
+  dnd5eapi:
+    api:
+      url: "https://www.dnd5eapi.co/api/:endpoint"
+    init-monsters: ${INIT_EX_RATES:false}
+
 
